--- a/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angularjs.TypeScript.DefinitelyTyped" version="5.2.1" targetFramework="net451" />
   <package id="Autofac" version="3.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="es6-promise.TypeScript.DefinitelyTyped" version="0.0.9" targetFramework="net451" />
   <package id="jQuery" version="1.9.1" targetFramework="net451" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.8.8" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
