- More sweeping as things come together - AdminNewCharacterController now written in Typescript.  That should be them all.

--- a/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
@@ -879,6 +879,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app\controllers\adminCharacterCtrl.ts" />
+    <TypeScriptCompile Include="app\controllers\adminNewCharacterCtrl.ts" />
     <TypeScriptCompile Include="app\controllers\characterCtrl.ts" />
     <TypeScriptCompile Include="app\controllers\movementRankCtrl.ts" />
     <TypeScriptCompile Include="app\controllers\moveRankCtrl.ts" />
