--- a/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs.TypeScript.DefinitelyTyped" version="5.2.1" targetFramework="net451" />
+  <package id="angular-local-storage" version="0.2.3" targetFramework="net451" />
   <package id="Autofac" version="3.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
