--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -101,6 +101,10 @@
     <Reference Include="Microsoft.Owin.Security.Cookies">
       <HintPath>..\packages\Microsoft.Owin.Security.Cookies.3.0.1\lib\net45\Microsoft.Owin.Security.Cookies.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin.Security.Jwt, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.Jwt.3.0.0\lib\net45\Microsoft.Owin.Security.Jwt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin.Security.OAuth">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
@@ -123,6 +127,11 @@
       <HintPath>..\packages\Swashbuckle.Core.5.2.2\lib\net40\Swashbuckle.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.1\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -177,23 +186,72 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Thinktecture.IdentityModel.Core, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Thinktecture.IdentityModel.Core.1.3.0\lib\net45\Thinktecture.IdentityModel.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\CharacterStatConfiguration.cs" />
+    <Compile Include="Configuration\MovementStatConfiguration.cs" />
+    <Compile Include="Configuration\MoveStatConfiguration.cs" />
+    <Compile Include="Infrastructure\ApplicationRoleManager.cs" />
+    <Compile Include="Infrastructure\ApplicationUser.cs" />
+    <Compile Include="Infrastructure\ApplicationUserManager.cs" />
+    <Compile Include="Infrastructure\AuthContext.cs" />
+    <Compile Include="Infrastructure\AuthRepository.cs" />
+    <Compile Include="Infrastructure\CharacterStatRepository.cs" />
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\ExtendedClaimsProvider.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\MovementStatRepository.cs" />
+    <Compile Include="Infrastructure\MoveStatRepository.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\Sm4shEntities.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\201602142029336_properseedsuperuserpd.cs" />
+    <Compile Include="Migrations\201602142029336_properseedsuperuserpd.Designer.cs">
+      <DependentUpon>201602142029336_properseedsuperuserpd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AccountBindingModels.cs" />
+    <Compile Include="Models\AerialStat.cs" />
+    <Compile Include="Models\CharacterStat.cs" />
+    <Compile Include="Models\ClaimBindingModel.cs" />
+    <Compile Include="Models\GroundStat.cs" />
+    <Compile Include="Models\ModelFactory.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\MoveController.cs" />
     <Compile Include="Controllers\MovementController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="CustomAssembliesResolver.cs" />
     <Compile Include="DTOs\BaseDTO.cs" />
     <Compile Include="DTOs\CharacterDTO.cs" />
     <Compile Include="DTOs\MoveDTO.cs" />
     <Compile Include="DTOs\MovementStatDTO.cs" />
+    <Compile Include="Models\MovementStat.cs" />
+    <Compile Include="Models\MoveStat.cs" />
+    <Compile Include="Models\MoveType.cs" />
+    <Compile Include="Models\RoleBindingModels.cs" />
+    <Compile Include="Models\SpecialStat.cs" />
+    <Compile Include="Models\Stat.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\CustomJwtFormat.cs" />
+    <Compile Include="Providers\CustomOAuthProvider.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
+    <Compile Include="Services\CharacterService.cs" />
+    <Compile Include="Services\MovementStatService.cs" />
+    <Compile Include="Services\MoveService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -217,18 +275,11 @@
       <Project>{2904d4e7-8989-46bd-ac0a-b4356f190a15}</Project>
       <Name>KuroganeHammer.Data.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KuroganeHammer.Data\KuroganeHammer.Data.csproj">
-      <Project>{f01469b8-495a-46f9-9b8a-eb87a049aa0a}</Project>
-      <Name>KuroganeHammer.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KuroganeHammer.Model\KuroganeHammer.Model.csproj">
-      <Project>{a96ff023-4419-4b0c-9a4d-fa3e60650a7c}</Project>
-      <Name>KuroganeHammer.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KuroganeHammer.Service\KuroganeHammer.Service.csproj">
-      <Project>{34d1dd2c-02be-4564-8ac5-dee2eb223632}</Project>
-      <Name>KuroganeHammer.Service</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201602142029336_properseedsuperuserpd.resx">
+      <DependentUpon>201602142029336_properseedsuperuserpd.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
