--- a/Kurogane.Data.RestApi/packages.config
+++ b/Kurogane.Data.RestApi/packages.config
@@ -25,10 +25,13 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Jwt" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Mono.Reflection" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.1" targetFramework="net452" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.3.0" targetFramework="net452" />
 </packages>
