- GET /characters/{id} now returns a CharacterDTO instead of CharacterStat - Overrode characterdto equals for update comparisons - Removed unused WebScraper.Character.FromId - Added UpdateCharacterData test. - Added PropertyUpdateHelper class to update properties and objects - Delete some unused smoke tests

--- a/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
+++ b/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="BaseTest.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="PropertyUpdateHelper.cs" />
     <Compile Include="Smoke.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
