--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -8,7 +8,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <appSettings />
+  <appSettings>
+    <add key="as:AudienceId" value="914e1927a3884f68abc79f7283837fd5" />
+    <add key="as:AudienceSecret" value="bMCdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAfp5" />
+  </appSettings>
   <connectionStrings>
     <add name="Sm4shEntities" connectionString="Data Source=BRIGHTSIDE\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=frannsoftdev;Password=Fr018361;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
     <add name="KuroganeServiceContext" connectionString="Data Source=BRIGHTSIDE\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=frannsoftdev;Password=Fr018361;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
