Revert "- fixed DTO naming to 'DTO' instead of 'Dto' - Removed GetMoveForCharacterOfType from CharacterController - GetMove now returns DTO instead of model object - marked remaining post/put/delete/create methods as requiring auth - Added empty params MoveDTO so it could be populated from json deserialization - WebScraper.Character to not require description and style in ctor - Added another HttpClient so there is a authenticated version and anonymous version - All smoke tests now use anonymous httpclient - Added GET api call tests in Smoke.cs"
This reverts commit cd6fc2d1015f65ca87c13787835b9da0db60660e.

--- a/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
+++ b/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Kurogane.Data.RestApi">
-      <HintPath>..\..\Kurogane.Data.RestApi\bin\Kurogane.Data.RestApi.dll</HintPath>
+      <HintPath>E:\Development\C#projects\Kurogane.Data\Kurogane.Data.RestApi\bin\Kurogane.Data.RestApi.dll</HintPath>
     </Reference>
     <Reference Include="KuroganeHammer.Data.Core">
       <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.Data.Core\bin\Debug\KuroganeHammer.Data.Core.dll</HintPath>
