--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -25,7 +25,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation targetFramework="4.5.2" debug="true" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
   <runtime>
