--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>Kurogane.Data.RestApi</RootNamespace>
     <AssemblyName>Kurogane.Data.RestApi</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -285,7 +285,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53410</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/FrannHammerAPI</IISUrl>
+          <IISUrl>http://localhost:53410/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
