--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -13,8 +13,8 @@
     <add key="as:AudienceSecret" value="bMCdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAfp5"/>
   </appSettings>
   <connectionStrings>
-    <add name="Sm4shEntities" connectionString="Data Source=***REMOVED***\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=***REMOVED***;Password=Fr018361;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
-    <add name="AuthContext" connectionString="Data Source=***REMOVED***\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=***REMOVED***;Password=Fr018361;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    <add name="Sm4shEntities" connectionString="Data Source=***REMOVED***\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=***REMOVED***;Password=;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    <add name="AuthContext" connectionString="Data Source=***REMOVED***\SQLEXPRESS;Initial Catalog=Sm4sh;Integrated Security=False;Persist Security Info=True;User ID=***REMOVED***;Password=;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
