--- a/KuroganeHammer.WebScraper/KuroganeHammer.WebScraper.csproj
+++ b/KuroganeHammer.WebScraper/KuroganeHammer.WebScraper.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="CharacterAttributeStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HomePage.cs" />
     <Compile Include="Page.cs" />
