--- a/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
@@ -26,6 +26,7 @@
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
     <TypeScriptToolsVersion>1.7</TypeScriptToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -72,6 +73,7 @@
     <Content Include="content\css\boxfade.css" />
     <Content Include="content\css\bootstrap.css" />
     <Content Include="content\css\bootstrap.min.css" />
+    <Content Include="content\css\character.css" />
     <Content Include="content\css\cyborg.css" />
     <Content Include="content\css\Site.css" />
     <Content Include="content\css\sortorder.css" />
