--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -113,7 +113,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin">
@@ -236,6 +236,14 @@
     <Compile Include="Migrations\201603250309057_adding stronger support for attribute type flags.Designer.cs">
       <DependentUpon>201603250309057_adding stronger support for attribute type flags.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603261458160_added Client db type.cs" />
+    <Compile Include="Migrations\201603261458160_added Client db type.Designer.cs">
+      <DependentUpon>201603261458160_added Client db type.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603261754203_removed client model property.cs" />
+    <Compile Include="Migrations\201603261754203_removed client model property.Designer.cs">
+      <DependentUpon>201603261754203_removed client model property.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AerialStat.cs" />
@@ -264,6 +272,7 @@
     <Compile Include="Models\Stat.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\CustomJwtFormat.cs" />
     <Compile Include="Providers\CustomOAuthProvider.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
@@ -310,6 +319,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603250309057_adding stronger support for attribute type flags.resx">
       <DependentUpon>201603250309057_adding stronger support for attribute type flags.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603261458160_added Client db type.resx">
+      <DependentUpon>201603261458160_added Client db type.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603261754203_removed client model property.resx">
+      <DependentUpon>201603261754203_removed client model property.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
