- Instantiated AppRoleManager in startup.cs - Added proper Roles to seed user

--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Models\MoveStat.cs" />
     <Compile Include="Models\MoveType.cs" />
     <Compile Include="Models\RoleBindingModels.cs" />
+    <Compile Include="Models\RolesConstants.cs" />
     <Compile Include="Models\SpecialStat.cs" />
     <Compile Include="Models\Stat.cs" />
     <Compile Include="Models\UserModel.cs" />
